--- a/gdgminsk/Storyboards/Events.storyboard
+++ b/gdgminsk/Storyboards/Events.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="q3G-u6-cMX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="q3G-u6-cMX">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -14,9 +14,28 @@
                     <view key="view" contentMode="scaleToFill" id="snN-jj-f0N">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="gCm-Ia-M2g">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="q3G-u6-cMX" id="wVs-xz-L6i"/>
+                                    <outlet property="delegate" destination="q3G-u6-cMX" id="nyW-Mj-J0X"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="gCm-Ia-M2g" firstAttribute="top" secondItem="Cf4-Pg-Ra8" secondAttribute="top" id="4NF-N1-ICm"/>
+                            <constraint firstItem="Cf4-Pg-Ra8" firstAttribute="bottom" secondItem="gCm-Ia-M2g" secondAttribute="bottom" id="8mu-kx-Pun"/>
+                            <constraint firstItem="gCm-Ia-M2g" firstAttribute="leading" secondItem="Cf4-Pg-Ra8" secondAttribute="leading" id="W7E-6J-xsu"/>
+                            <constraint firstItem="Cf4-Pg-Ra8" firstAttribute="trailing" secondItem="gCm-Ia-M2g" secondAttribute="trailing" id="jf3-Mr-4wk"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Cf4-Pg-Ra8"/>
                     </view>
+                    <connections>
+                        <outlet property="eventsTableView" destination="gCm-Ia-M2g" id="1Fg-Ms-vRC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="h1e-W1-s2m" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
