--- a/gdgminsk/Scenes/Events/Events.storyboard
+++ b/gdgminsk/Scenes/Events/Events.storyboard
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="q3G-u6-cMX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="q3G-u6-cMX">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -15,21 +17,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nKn-gU-0ox" customClass="HeaderFilterView" customModule="gdgminsk" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="60" width="414" height="50"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="Z0Q-bm-r9s"/>
+                                </constraints>
+                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="gCm-Ia-M2g">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <rect key="frame" x="0.0" y="110" width="414" height="752"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="gCm-Ia-M2g" firstAttribute="top" secondItem="Cf4-Pg-Ra8" secondAttribute="top" id="4NF-N1-ICm"/>
-                            <constraint firstItem="Cf4-Pg-Ra8" firstAttribute="bottom" secondItem="gCm-Ia-M2g" secondAttribute="bottom" id="8mu-kx-Pun"/>
-                            <constraint firstItem="gCm-Ia-M2g" firstAttribute="leading" secondItem="Cf4-Pg-Ra8" secondAttribute="leading" id="W7E-6J-xsu"/>
-                            <constraint firstItem="Cf4-Pg-Ra8" firstAttribute="trailing" secondItem="gCm-Ia-M2g" secondAttribute="trailing" id="jf3-Mr-4wk"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Cf4-Pg-Ra8"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Cf4-Pg-Ra8" firstAttribute="bottom" secondItem="gCm-Ia-M2g" secondAttribute="bottom" id="8mu-kx-Pun"/>
+                            <constraint firstItem="gCm-Ia-M2g" firstAttribute="top" secondItem="nKn-gU-0ox" secondAttribute="bottom" id="VVp-bP-2cf"/>
+                            <constraint firstItem="gCm-Ia-M2g" firstAttribute="leading" secondItem="Cf4-Pg-Ra8" secondAttribute="leading" id="W7E-6J-xsu"/>
+                            <constraint firstItem="Cf4-Pg-Ra8" firstAttribute="trailing" secondItem="nKn-gU-0ox" secondAttribute="trailing" id="a9V-5J-5bF"/>
+                            <constraint firstItem="Cf4-Pg-Ra8" firstAttribute="trailing" secondItem="gCm-Ia-M2g" secondAttribute="trailing" id="jf3-Mr-4wk"/>
+                            <constraint firstItem="nKn-gU-0ox" firstAttribute="top" secondItem="Cf4-Pg-Ra8" secondAttribute="top" constant="16" id="rRn-QH-fbs"/>
+                            <constraint firstItem="nKn-gU-0ox" firstAttribute="leading" secondItem="Cf4-Pg-Ra8" secondAttribute="leading" id="vC8-9e-JgH"/>
+                        </constraints>
                     </view>
                     <connections>
+                        <outlet property="headerFilterView" destination="nKn-gU-0ox" id="NGE-1j-H78"/>
                         <outlet property="tableView" destination="gCm-Ia-M2g" id="KrC-AU-Nxw"/>
                     </connections>
                 </viewController>
@@ -38,4 +51,9 @@
             <point key="canvasLocation" x="135" y="133"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
