--- a/gdgminsk/Scenes/Events/Cells/EventTableCell.xib
+++ b/gdgminsk/Scenes/Events/Cells/EventTableCell.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -21,17 +22,27 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="que-Tx-lO1">
                         <rect key="frame" x="16" y="12" width="320" height="80"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="29" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UdG-gn-RhC">
-                                <rect key="frame" x="22" y="10" width="40" height="33.5"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yYV-A6-90H">
+                                <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                <color key="backgroundColor" name="blue"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="40" id="tnV-pN-Fts"/>
+                                    <constraint firstAttribute="width" constant="80" id="Ph5-Yw-4kl"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="29" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UdG-gn-RhC">
+                                <rect key="frame" x="0.0" y="8" width="80" height="33.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="tnV-pN-Fts"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U1U-da-VUK">
-                                <rect key="frame" x="21" y="47" width="42" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U1U-da-VUK">
+                                <rect key="frame" x="0.0" y="53.5" width="80" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="80" id="6y1-xj-a2b"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -49,18 +60,21 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="systemGray6Color"/>
                         <constraints>
-                            <constraint firstAttribute="bottom" secondItem="U1U-da-VUK" secondAttribute="bottom" constant="12" id="1BI-z6-2iF"/>
-                            <constraint firstItem="U1U-da-VUK" firstAttribute="centerX" secondItem="UdG-gn-RhC" secondAttribute="centerX" id="9TF-BS-nhv"/>
+                            <constraint firstItem="yYV-A6-90H" firstAttribute="top" secondItem="que-Tx-lO1" secondAttribute="top" id="8lm-UP-bpe"/>
                             <constraint firstAttribute="trailing" secondItem="1vS-Oy-OCO" secondAttribute="trailing" constant="16" id="BJf-U8-VOc"/>
+                            <constraint firstItem="1vS-Oy-OCO" firstAttribute="leading" secondItem="yYV-A6-90H" secondAttribute="trailing" constant="10" id="BSB-i7-sXN"/>
                             <constraint firstItem="Rbw-ZW-mSx" firstAttribute="top" secondItem="que-Tx-lO1" secondAttribute="top" constant="16" id="CKm-aH-oj6"/>
-                            <constraint firstItem="UdG-gn-RhC" firstAttribute="top" secondItem="que-Tx-lO1" secondAttribute="top" constant="10" id="Fz6-jN-HDd"/>
+                            <constraint firstItem="UdG-gn-RhC" firstAttribute="top" secondItem="que-Tx-lO1" secondAttribute="top" constant="8" id="Fz6-jN-HDd"/>
+                            <constraint firstItem="yYV-A6-90H" firstAttribute="leading" secondItem="que-Tx-lO1" secondAttribute="leading" id="HX0-SN-ULR"/>
                             <constraint firstAttribute="trailing" secondItem="Rbw-ZW-mSx" secondAttribute="trailing" constant="16" id="QRX-31-nof"/>
-                            <constraint firstItem="Rbw-ZW-mSx" firstAttribute="leading" secondItem="que-Tx-lO1" secondAttribute="leading" constant="90" id="Tqu-JZ-a8n"/>
-                            <constraint firstItem="UdG-gn-RhC" firstAttribute="leading" secondItem="que-Tx-lO1" secondAttribute="leading" constant="22" id="XJp-Eg-yjp"/>
-                            <constraint firstItem="1vS-Oy-OCO" firstAttribute="leading" secondItem="que-Tx-lO1" secondAttribute="leading" constant="90" id="dIh-qb-Yr0"/>
+                            <constraint firstItem="UdG-gn-RhC" firstAttribute="leading" secondItem="que-Tx-lO1" secondAttribute="leading" id="XJp-Eg-yjp"/>
+                            <constraint firstItem="Rbw-ZW-mSx" firstAttribute="leading" secondItem="yYV-A6-90H" secondAttribute="trailing" constant="10" id="hSs-qR-03e"/>
                             <constraint firstItem="1vS-Oy-OCO" firstAttribute="top" secondItem="Rbw-ZW-mSx" secondAttribute="bottom" constant="9.5" id="lhh-Qh-my1"/>
+                            <constraint firstAttribute="bottom" secondItem="yYV-A6-90H" secondAttribute="bottom" id="n4p-TL-GGh"/>
+                            <constraint firstItem="U1U-da-VUK" firstAttribute="top" secondItem="UdG-gn-RhC" secondAttribute="bottom" constant="12" id="shQ-6S-z9E"/>
+                            <constraint firstItem="U1U-da-VUK" firstAttribute="leading" secondItem="que-Tx-lO1" secondAttribute="leading" id="u9i-dC-OVw"/>
                             <constraint firstAttribute="bottom" secondItem="1vS-Oy-OCO" secondAttribute="bottom" constant="12" id="w1k-lY-G9N"/>
                         </constraints>
                     </view>
@@ -76,7 +90,9 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="addressLabel" destination="Rbw-ZW-mSx" id="VJa-Sk-fER"/>
+                <outlet property="contentContainer" destination="que-Tx-lO1" id="3Vl-42-akh"/>
                 <outlet property="dateLabel" destination="UdG-gn-RhC" id="QMC-He-Za2"/>
+                <outlet property="futureBackgroundView" destination="yYV-A6-90H" id="fF3-i2-dc7"/>
                 <outlet property="monthLabel" destination="U1U-da-VUK" id="0a3-5H-MHy"/>
                 <outlet property="titleLabel" destination="1vS-Oy-OCO" id="3RM-7i-f0H"/>
             </connections>
@@ -84,8 +100,11 @@
         </tableViewCell>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <namedColor name="blue">
+            <color red="0.20000000000000001" green="0.44705882352941179" blue="0.87450980392156863" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
