--- a/gdgminsk/Scenes/Events/Cells/EventTableCell.xib
+++ b/gdgminsk/Scenes/Events/Cells/EventTableCell.xib
@@ -6,7 +6,6 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -60,7 +59,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemGray6Color"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="yYV-A6-90H" firstAttribute="top" secondItem="que-Tx-lO1" secondAttribute="top" id="8lm-UP-bpe"/>
                             <constraint firstAttribute="trailing" secondItem="1vS-Oy-OCO" secondAttribute="trailing" constant="16" id="BJf-U8-VOc"/>
@@ -103,8 +102,5 @@
         <namedColor name="blue">
             <color red="0.20000000000000001" green="0.44705882352941179" blue="0.87450980392156863" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemGray6Color">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
     </resources>
 </document>
